[package]
name = "ring_buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.1"
core_affinity = "0.8.1"
crossbeam-epoch = "0.9.15"
crossbeam-utils = "0.8.16"
libc = { version = "0.2.148", features = ["align"] }
parking_lot = "0.12.1"
seqlock = "0.2.0"
